{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 35,
  "lineage": "201b8350-ae9c-5861-3663-7dc71e4ed6ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861276099115:internet-gateway/igw-0a7c94f5ddd9d3d17",
            "id": "igw-0a7c94f5ddd9d3d17",
            "owner_id": "861276099115",
            "vpc_id": "vpc-0cca76f01b4fb3425"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861276099115:route-table/rtb-0155ccebc9d791f3f",
            "id": "rtb-0155ccebc9d791f3f",
            "owner_id": "861276099115",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cca76f01b4fb3425"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_route_table_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cda3e043c844589",
            "route_table_id": "rtb-0155ccebc9d791f3f",
            "subnet_id": "subnet-054bf720ea18179ad"
          },
          "dependencies": [
            "aws_route_table.eks_route_table",
            "aws_subnet.eks_subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_route_table_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6ae02b8c1fee0d4",
            "route_table_id": "rtb-0155ccebc9d791f3f",
            "subnet_id": "subnet-00a6e40f03275fdc7"
          },
          "dependencies": [
            "aws_route_table.eks_route_table",
            "aws_subnet.eks_subnet_b",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861276099115:security-group/sg-09de4d5f8416667f7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09de4d5f8416667f7",
            "ingress": [],
            "name": "terraform-20241202054152296400000001",
            "name_prefix": "terraform-",
            "owner_id": "861276099115",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cca76f01b4fb3425"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861276099115:subnet/subnet-054bf720ea18179ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054bf720ea18179ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861276099115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS Subnet A"
            },
            "tags_all": {
              "Name": "EKS Subnet A"
            },
            "vpc_id": "vpc-0cca76f01b4fb3425"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861276099115:subnet/subnet-00a6e40f03275fdc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a6e40f03275fdc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861276099115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS Subnet B"
            },
            "tags_all": {
              "Name": "EKS Subnet B"
            },
            "vpc_id": "vpc-0cca76f01b4fb3425"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861276099115:vpc/vpc-0cca76f01b4fb3425",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048c6222d34f60c81",
            "default_route_table_id": "rtb-0002a15818bbcdd3f",
            "default_security_group_id": "sg-0f5e90470ba06239f",
            "dhcp_options_id": "dopt-0536aafbaf73e9a40",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cca76f01b4fb3425",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0002a15818bbcdd3f",
            "owner_id": "861276099115",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}